@@ -1,0 +1,10 @@
+<html>
+  <head>
+    <title>Multi Elements Page</title>
+  </head>
+  <body>
+    <input class='button' type="submit" value="Button 1"/>
+    <input class='button' type="submit" value="Button 2"/>
+    <input class='button' type="submit" value="Button 3"/>
+  </body>
+</html>
